# Q4_2025_Accel_AbimbolaEA

./: .gitignore  README.md
accel_whitelist/: Anchor.toml  package.json
accel_whitelist/programs/accel_whitelist/: Cargo.toml
accel_whitelist/programs/accel_whitelist/src/: error.rs  lib.rs
accel_whitelist/programs/accel_whitelist/src/instructions/: initialize_extra_account_meta_list.rs  initialize_whitelist.rs  mint_token.rs  mod.rs  transfer_hook.rs  whitelist_function.rs
accel_whitelist/programs/accel_whitelist/src/state/: mod.rs
accel_whitelist/tests/: accel_whitelist.ts
andre_whitelist_feature/: Anchor.toml
andre_whitelist_feature/programs/andre_whitelist_feature/: Cargo.toml
andre_whitelist_feature/programs/andre_whitelist_feature/src/: lib.rs
andre_whitelist_feature/programs/andre_whitelist_feature/src/instructions/: initialize_extra_account.rs  initialize_whitelist.rs  mint_token.rs  mod.rs  transfer_hooks.rs  whitelist_function.rs
andre_whitelist_feature/programs/andre_whitelist_feature/src/state/: mod.rs  whitelist.rs
andre_whitelist_feature/tests/: andre_whitelist_feature.ts
damos/fundraiser/: Cargo.toml
damos/fundraiser/src/: main.rs
damos/fundraiser/src/helpers/: fundraise.rs  mod.rs
damos/fundraiser/src/state/: contributor.rs  fundraiser.rs  mod.rs
damos/p-fundraiser/: .gitignore  Cargo.toml  Makefile  README.md
damos/p-fundraiser/src/: constant.rs  lib.rs  test.rs
damos/p-fundraiser/src/instructions/: check_contributions.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
damos/p-fundraiser/src/state/: contributor.rs  fundraiser.rs
damos/p-fundraiser/tests/: test_litesvm.rs
damos/pi-escrow/: Cargo.toml
damos/pi-escrow/src/: lib.rs
damos/pi-escrow/src/instructions/: make.rs  mod.rs  take.rs
damos/pi-escrow/src/state/: escrow.rs
damos/pi-escrow/src/tests/: mod.rs
personal_week1_challenge/: Anchor.toml  package.json
personal_week1_challenge/programs/vault/: Cargo.toml
personal_week1_challenge/programs/vault/src/: lib.rs
personal_week1_challenge/programs/whitelist_and_hook/: Cargo.toml
personal_week1_challenge/programs/whitelist_and_hook/src/: error.rs  lib.rs
personal_week1_challenge/programs/whitelist_and_hook/src/instructions/: init_extra_account_metas.rs  initialize.rs  mod.rs  transferhook.rs  whitelistoperations.rs
personal_week1_challenge/programs/whitelist_and_hook/src/state/: mod.rs
personal_week1_challenge/tests/: hooktest.rs  personal_week1_challenge.ts  transfer_hook_vault.rs
silicon/: Anchor.toml  Cargo.toml  README.md
silicon/programs/silicon/: Cargo.toml
silicon/programs/silicon/src/: constants.rs  error.rs  lib.rs
silicon/programs/silicon/src/instructions/: hook.rs  init_extra_account_metas.rs  initialize_agent.rs  interact_agent.rs  mod.rs  whitelistoperations.rs
silicon/programs/silicon/src/state/: mod.rs
silicon/programs/vault/: Cargo.toml
silicon/programs/vault/src/: constants.rs  lib.rs
silicon/programs/vault/src/instructions/: initialize.rs  mod.rs  payment.rs
silicon/programs/vault/src/state/: mod.rs
silicon/tests/: Cargo.toml
silicon/tests/src/: test_initialize.rs
week_1_challenge/: Anchor.toml
week_1_challenge/programs/vault/src/: lib.rs
week_1_challenge/programs/week_1_challenge/: Cargo.toml
week_1_challenge/programs/week_1_challenge/src/: lib.rs
week_1_challenge/tests/: week_1_challenge.ts
