cargo-features = ["edition2024"]
[package]
name = "pi-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-token-2022 = "0.1.0"

[dev-dependencies]
litesvm = "0.8.1"
litesvm-token = "0.8.1"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
spl-associated-token-account = "7.0.0"
