[package]
name = "accel_whitelist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "accel_whitelist"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.1", features = ["interface-instructions", "init-if-needed"]}
anchor-spl = "0.31.1"

# Manage discriminators better
spl-discriminator = "0.4"

# library to resolve TLV structures 
spl-tlv-account-resolution = "0.10.0"

#Lib ro resolve additional accts
spl-transfer-hook-interface = "0.10.0"